@@ -1,18 +1,18 @@
 ** test1: L1Topo::Header decoding **
-L1Topo::Header created from word     0xc0460023
+L1Topo::Header created from word 0xc0460023
 ** test2: L1Topo::Header encoding **
-L1Topo::Header encoded word     0xc0420034
-L1Topo::Header     ref word     0xc0420034
+L1Topo::Header encoded word 0xc0420034
+L1Topo::Header     ref word 0xc0420034
 ** test3: L1Topo::Header decode+encode **
-L1Topo::Header  decoded from word     0xc0460023
-L1Topo::Header re-encoded to word     0xc0460023
+L1Topo::Header  decoded from word 0xc0460023
+L1Topo::Header re-encoded to word 0xc0460023
 ** test4: L1Topo::signedBCN all cases **
 ** test5: L1Topo::L1TopoTOB encoding **
-L1Topo::L1TopoTOB created from word     0x83001037
+L1Topo::L1TopoTOB created from word 0x83001037
 ** test6: L1Topo::L1TopoTOB decoding **
 ** test7: L1Topo::L1TopoTOB encode+decode **
-L1Topo::L1TopoTOB encoded from word     0x82000112
-L1Topo::L1TopoTOB decoded   to word     0x82000112
+L1Topo::L1TopoTOB encoded from word 0x82000112
+L1Topo::L1TopoTOB decoded   to word 0x82000112
 ** test8: L1Topo::L1TopoTOB index, clock and fpga decoding **
 ** test9: L1Topo::getCTPbits **
 L1TopoRDO:
@@ -50,22 +50,22 @@ Trigger overflow bits:
 ** test10: L1Topo::triggerBitIndex **
 size of unsigned long 8 size of uint32_t 4
 module, ROIword, (index clock fpga), index, multiple of 8?
-0 0x0x80000000 ( 0 0 0 ) -> 0 true
-0 0x0x81000000 ( 1 0 0 ) -> 8 true
-0 0x0x82000000 ( 0 1 0 ) -> 16 true
-0 0x0x83000000 ( 1 1 0 ) -> 24 true
-0 0x0x84000000 ( 0 0 1 ) -> 32 true
-0 0x0x85000000 ( 1 0 1 ) -> 40 true
-0 0x0x86000000 ( 0 1 1 ) -> 48 true
-0 0x0x87000000 ( 1 1 1 ) -> 56 true
-1 0x0x80000000 ( 0 0 0 ) -> 64 true
-1 0x0x81000000 ( 1 0 0 ) -> 72 true
-1 0x0x82000000 ( 0 1 0 ) -> 80 true
-1 0x0x83000000 ( 1 1 0 ) -> 88 true
-1 0x0x84000000 ( 0 0 1 ) -> 96 true
-1 0x0x85000000 ( 1 0 1 ) -> 104 true
-1 0x0x86000000 ( 0 1 1 ) -> 112 true
-1 0x0x87000000 ( 1 1 1 ) -> 120 true
+0 0x80000000 ( 0 0 0 ) -> 0 true
+0 0x81000000 ( 1 0 0 ) -> 8 true
+0 0x82000000 ( 0 1 0 ) -> 16 true
+0 0x83000000 ( 1 1 0 ) -> 24 true
+0 0x84000000 ( 0 0 1 ) -> 32 true
+0 0x85000000 ( 1 0 1 ) -> 40 true
+0 0x86000000 ( 0 1 1 ) -> 48 true
+0 0x87000000 ( 1 1 1 ) -> 56 true
+1 0x80000000 ( 0 0 0 ) -> 64 true
+1 0x81000000 ( 1 0 0 ) -> 72 true
+1 0x82000000 ( 0 1 0 ) -> 80 true
+1 0x83000000 ( 1 1 0 ) -> 88 true
+1 0x84000000 ( 0 0 1 ) -> 96 true
+1 0x85000000 ( 1 0 1 ) -> 104 true
+1 0x86000000 ( 0 1 1 ) -> 112 true
+1 0x87000000 ( 1 1 1 ) -> 120 true
 ** test11: L1Topo::Error **
 0 ROB Error
 1 ROD Error
@@ -73,11 +73,20 @@ module, ROIword, (index clock fpga), index, multiple of 8?
 99 Unknown Error
 [ROB Error, S-Link Status Error]
 ** test12: L1Topo::Fibre encode+decode **
-Fibre with status and sizes     Fibre status,sizes: (0,0) (1,1) (0,0) (0,6) (0,13) 
-Fibre word encoded from these     0xd0440668
-Compare to word     0xd0440668
-L1Topo::Fibre  decoded from word     0xd0440668
-L1Topo::Fibre re-encoded to word     0xd0440668
+Fibre with status and sizes      Fibre status,sizes: (0,0) (1,1) (0,0) (0,6) (0,13) 
+Fibre word encoded from these 0xd0440668
+Compare to word 0xd0440668
+L1Topo::Fibre  decoded from word 0xd0440668
+L1Topo::Fibre re-encoded to word 0xd0440668
 ** test13: L1Topo::Status encode+decode **
-L1Topo::Status  decoded from word     0xe8000000
-L1Topo::Status re-encoded to word     0xe8000000
+L1Topo::Status  decoded from word 0xe8000000
+L1Topo::Status re-encoded to word 0xe8000000
+** test14: L1Topo::ModuleID encode+decode **
+ModuleID: 128 0x0080 0b10000000 link 0  module 0 ROI
+ModuleID: 1 0x0001 0b00000001 link 1  module 0 DAQ
+ModuleID: 144 0x0090 0b10010000 link 0  module 1 ROI
+ModuleID: 17 0x0011 0b00010001 link 1  module 1 DAQ
+ModuleID: 128 0x0080 0b10000000 link 0  module 0 ROI
+ModuleID: 1 0x0001 0b00000001 link 1  module 0 DAQ
+ModuleID: 144 0x0090 0b10010000 link 0  module 1 ROI
+ModuleID: 17 0x0011 0b00010001 link 1  module 1 DAQ
